--- a/project/public/assets/scss/components/_forms.scss
+++ b/project/public/assets/scss/components/_forms.scss
@@ -90,3 +90,27 @@ input{
 .error{
   color: $clr-red;
 }
+//select2
+.block-form-checkout{
+  .select2-container--default .select2-selection--single {
+    border: 1px solid #ddd;
+    box-shadow: inset 0 0.0625em 0.125em rgba(10, 10, 10, 0.05);
+    .select2-selection__rendered{
+      line-height: 50px;
+    }
+    .select2-selection__arrow{
+      height: 48px;
+    }
+    
+  }
+  .select2-container .select2-selection--single{
+    height: 50px;
+  }
+}
+.select2-container--default .select2-results>.select2-results__options{
+  @include customScrollH();
+}
+.select2-dropdown{
+  border: 1px solid #ddd!important;
+  box-shadow: inset 0 0.0625em 0.125em rgba(10, 10, 10, 0.05);
+}
