--- a/project/public/assets/css/template.css
+++ b/project/public/assets/css/template.css
@@ -972,14 +972,17 @@ input:focus {
   color: #ff4343; }
 
 .block-form-checkout .select2-container--default .select2-selection--single {
-  border: 1px solid #ddd;
+  border: 2px solid #ddd;
   box-shadow: inset 0 0.0625em 0.125em rgba(10, 10, 10, 0.05); }
   .block-form-checkout .select2-container--default .select2-selection--single .select2-selection__rendered {
-    line-height: 50px; }
+    line-height: 50px;
+    color: #000; }
   .block-form-checkout .select2-container--default .select2-selection--single .select2-selection__arrow {
     height: 48px; }
 .block-form-checkout .select2-container .select2-selection--single {
   height: 50px; }
+.block-form-checkout .select2-selection__placeholder {
+  color: #a3a0a0; }
 
 .select2-container--default .select2-results > .select2-results__options::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
