--- a/project/public/assets/scss/components/_forms.scss
+++ b/project/public/assets/scss/components/_forms.scss
@@ -93,10 +93,11 @@ input{
 //select2
 .block-form-checkout{
   .select2-container--default .select2-selection--single {
-    border: 1px solid #ddd;
+    border: 2px solid #ddd;
     box-shadow: inset 0 0.0625em 0.125em rgba(10, 10, 10, 0.05);
     .select2-selection__rendered{
       line-height: 50px;
+      color: $clr-black;
     }
     .select2-selection__arrow{
       height: 48px;
@@ -105,6 +106,9 @@ input{
   }
   .select2-container .select2-selection--single{
     height: 50px;
+  }
+  .select2-selection__placeholder{
+    color: #a3a0a0
   }
 }
 .select2-container--default .select2-results>.select2-results__options{
